# Hook

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  README_CN.md  README_RELEASE.md  deploy.sh  docker-compose.prebuilt.yml  docker-compose.yml  install.sh  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  update.sh
apps/hook_backend/: AGENTS.md  Cargo.toml
apps/hook_backend/src/: api_token_cleanup.rs  app_state.rs  auth.rs  card_code_currency.rs  commands.rs  exchange_rates.rs  frontend.rs  http_config.rs  init.rs  main.rs  model_status_probe.rs  performance_monitoring_api.rs  performance_monitoring_disk.rs  performance_monitoring_os.rs  performance_monitoring_tcp.rs  performance_monitoring_worker.rs  recharge_secret_cipher.rs  request_record_cleanup.rs  request_record_sweep.rs  routing_api.rs  scheduled_tasks.rs  schema.rs  startup.rs  system.rs
apps/hook_backend/src/cache_monitoring_api/: mod.rs  tests.rs
apps/hook_backend/src/init/: defaults.rs
apps/hook_backend/src/llm_proxy/: audit.rs  auth.rs  billing.rs  cache.rs  cache_affinity.rs  candidate.rs  candidate_tests.rs  capabilities.rs  client_error.rs  error.rs  formats.rs  handlers.rs  mod.rs  model_access.rs  proxy.rs  rate_limit.rs  rate_limit_tests.rs  request_payload_writer.rs  request_record_policy.rs  token_usage.rs  ws.rs
apps/hook_backend/src/migration/: announcement_menu_deep_match_additive.rs  announcement_priority_removal_additive.rs  auth_layout_site_name_i18n_additive.rs  dashboard_period_i18n_additive.rs  dashboard_recent_error_timing_additive.rs  dashboard_request_metrics_additive.rs  dashboard_stage_latency_additive.rs  default_seed_sync.rs  development.rs  development_additive.rs  development_tests.rs  global_model_user_usage_counts_additive.rs  m20260508_000002_add_rbac_timestamps.rs  m20260508_000003_add_wallets.rs  m20260508_000004_wallet_user_only_access.rs  mod.rs  provider_group_member_priority_additive.rs  provider_group_removal_destructive.rs  provider_image_stream_mode_additive.rs  provider_key_capabilities_additive.rs  provider_key_capabilities_destructive.rs  provider_key_group_member_priority_additive.rs  provider_key_model_mappings_additive.rs  provider_origin_additive.rs  provider_quick_import_group_id_additive.rs  provider_quick_import_source_credentials_additive.rs  provider_quick_import_sync_additive.rs  provider_quick_import_sync_controls_additive.rs  provider_quick_import_sync_schedule_additive.rs  provider_stream_first_output_timeout_additive.rs  provider_stream_timeout_semantics_destructive.rs  recharge_order_paid_at_index_additive.rs  request_record_cleanup_config_additive.rs  request_record_partitioning_additive.rs  request_record_payload_compression_additive.rs  routing_metric_timing_semantics_additive.rs  routing_metrics_additive.rs  routing_profile_overrides_additive.rs  routing_profile_state_partition_additive.rs  scheduled_task_next_run_additive.rs  (+8 more)
apps/hook_backend/src/proxy_cache_hooks/: api_token.rs  cache.rs  group.rs  mod.rs  model.rs  provider.rs  setting.rs  user.rs  user_tests.rs
apps/hook_backend/src/scheduled_tasks/: model_status.rs  performance_monitoring.rs  provider_quick_import.rs  recharge.rs  request_payload.rs  request_record.rs  tests.rs
crates/api_token/: Cargo.toml
crates/api_token/src/api/: error.rs  handlers.rs  mod.rs  routes.rs  state.rs
crates/api_token/src/application/: error.rs  mod.rs  ports.rs  records.rs  service.rs  service_owner_tests.rs  service_test_support.rs  service_test_users.rs  service_tests.rs  token.rs  validation.rs  validation_tests.rs
crates/api_token/src/infra/: mod.rs  storage_repository.rs
crates/card_code/: Cargo.toml
crates/card_code/src/api/: error.rs  handlers.rs  mod.rs  routes.rs  state.rs
crates/card_code/src/application/: error.rs  mod.rs  ports.rs  service.rs  service_tests.rs  validation.rs
crates/card_code/src/infra/: mod.rs  storage_repository.rs
crates/dashboard/: Cargo.toml
crates/dashboard/src/api/: error.rs  handlers.rs  mod.rs  routes.rs  state.rs
crates/dashboard/src/application/: error.rs  mod.rs  ports.rs  service.rs  service_tests.rs
crates/dashboard/src/infra/: mod.rs  storage_repository.rs
crates/formats/: Cargo.toml
crates/formats/src/: api.rs  lib.rs
crates/formats/src/contracts/: actions.rs  auth_context.rs  control_payloads.rs  mod.rs  plan_kinds.rs  report_kinds.rs  usage.rs
crates/formats/src/formats/: context.rs  id.rs  (+3 more)
crates/model/: Cargo.toml
crates/model_status/: Cargo.toml
crates/operations/: Cargo.toml
crates/payment/: Cargo.toml
crates/payment/src/: error.rs  lib.rs  ports.rs  registry.rs
crates/provider/: Cargo.toml
crates/rbac/: Cargo.toml
crates/recharge/: Cargo.toml
crates/req/: Cargo.toml
crates/req/src/: client_config.rs  content_type.rs  lib.rs  query.rs  reqwest_client.rs  response.rs  retry.rs  types.rs  websocket.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/setting/: Cargo.toml
crates/storage/: Cargo.toml
crates/storage/src/: database.rs  error.rs  json.rs  lib.rs  usage_flush.rs
crates/storage/tests/: api_token_usage.rs  dashboard_cost_analysis.rs  dashboard_overview.rs  dashboard_user_stats.rs  model_usage.rs  operations_announcements.rs  performance_monitoring.rs  performance_monitoring_analytics.rs  provider_cooldowns.rs  provider_create_group_binding.rs  provider_list_filters.rs  provider_model_bindings.rs  provider_quick_import.rs  provider_quick_import_sync_events.rs  provider_quick_import_sync_summary.rs  provider_request_candidates.rs  provider_request_cleanup_batches.rs  provider_request_housekeeping.rs  provider_request_payload_backfill.rs  provider_request_record_filter_status.rs  provider_request_record_stale_sweep.rs  provider_request_records.rs  provider_routing_route_states.rs  scheduler_claims.rs  user_delete_tokens.rs  user_list_ordering.rs  wallet_consumption.rs  wallet_ledger_entries.rs
crates/user/: Cargo.toml
crates/user/src/: lib.rs  test_support.rs
crates/wallet/: Cargo.toml
(+3543 files in other folders)
