[workspace]
members = [
    "apps/hook_backend",
    "crates/api_token",
    "crates/config",
    "crates/constants",
    "crates/group",
    "crates/i18n",
    "crates/model",
    "crates/rbac",
    "crates/setting",
    "crates/storage",
    "crates/tracing",
    "crates/types",
    "crates/user",
    "crates/wallet",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
async-trait = "0.1.89"
axum = "0.8.9"
bcrypt = "0.17.1"
api_token = { path = "crates/api_token" }
config_rs = { package = "config", version = "0.15.22", default-features = false, features = ["yaml"] }
configuration = { path = "crates/config" }
constants = { path = "crates/constants" }
group = { path = "crates/group" }
i18n = { path = "crates/i18n" }
hex = "0.4.3"
hook_tracing = { path = "crates/tracing" }
jsonwebtoken = "9.3.1"
matchit = "0.8.4"
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rbac = { path = "crates/rbac" }
setting = { path = "crates/setting" }
redis = { version = "1.2.1", default-features = false, features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
storage = { path = "crates/storage" }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread"] }
tokio-postgres = "0.7.17"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
types = { path = "crates/types" }
user = { path = "crates/user" }
wallet = { path = "crates/wallet" }
uuid = { version = "1.23.1", features = ["v7", "fast-rng"] }
jiff = "0.2.23"
model = { path = "crates/model" }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = { version = "1.41.0", features = ["serde-with-float"] }
sea-orm = { version = "2.0.0-rc.38", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-rust_decimal", "with-time", "with-json"] }
sea-orm-migration = { version = "2.0.0-rc.38", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
time = { version = "0.3.44", features = ["formatting", "parsing"] }
