[workspace]
members = [
    "apps/hook_backend",
    "crates/api_token",
    "crates/captcha",
    "crates/card_code",
    "crates/config",
    "crates/constants",
    "crates/currency",
    "crates/dashboard",
    "crates/formats",
    "crates/group",
    "crates/i18n",
    "crates/model",
    "crates/model_status",
    "crates/operations",
    "crates/payment",
    "crates/proxy",
    "crates/recharge",
    "crates/provider",
    "crates/req",
    "crates/rbac",
    "crates/scheduler",
    "crates/setting",
    "crates/storage",
    "crates/tracing",
    "crates/types",
    "crates/user",
    "crates/wallet",
]
resolver = "3"

[profile.ci]
inherits = "release"
opt-level = 0
debug = 0
codegen-units = 256
incremental = false

[workspace.package]
version = "1.1.0"
edition = "2024"

[workspace.dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["multipart", "ws"] }
bcrypt = "0.17.1"
base64 = "0.22.1"
api_token = { path = "crates/api_token" }
captcha = { path = "crates/captcha" }
card_code = { path = "crates/card_code" }
config_rs = { package = "config", version = "0.15.22", default-features = false, features = ["yaml"] }
configuration = { path = "crates/config" }
constants = { path = "crates/constants" }
currency = { path = "crates/currency" }
dashboard = { path = "crates/dashboard" }
futures-util = "0.3.31"
flate2 = "1.1.5"
formats = { path = "crates/formats" }
group = { path = "crates/group" }
i18n = { path = "crates/i18n" }
hex = "0.4.3"
hook_tracing = { path = "crates/tracing" }
http = "1.3.1"
jsonwebtoken = "9.3.1"
lettre = { version = "0.11.21", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls", "hostname"] }
matchit = "0.8.4"
md-5 = "0.10.6"
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rbac = { path = "crates/rbac" }
scheduler = { path = "crates/scheduler" }
setting = { path = "crates/setting" }
redis = { version = "1.2.1", default-features = false, features = ["tokio-comp", "connection-manager"] }
regex = "1.12.2"
ring = "0.17.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7"
sha1 = "0.10.6"
sha2 = "0.10.9"
siwe = "0.6.1"
storage = { path = "crates/storage" }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7.18", features = ["time"] }
tokio-postgres = "0.7.17"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
types = { path = "crates/types" }
user = { path = "crates/user" }
wallet = { path = "crates/wallet" }
uuid = { version = "1.23.1", features = ["v4", "v7", "fast-rng"] }
url = "2.5.7"
jiff = "0.2.23"
model = { path = "crates/model" }
model_status = { path = "crates/model_status" }
operations = { path = "crates/operations" }
payment = { path = "crates/payment" }
provider = { path = "crates/provider" }
proxy = { path = "crates/proxy" }
recharge = { path = "crates/recharge" }
req = { path = "crates/req" }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
rust_decimal = { version = "1.41.0", features = ["serde-with-float"] }
rust-embed = { version = "8.11.0", features = ["mime-guess"] }
sea-orm = { version = "2.0.0-rc.38", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "mock", "with-rust_decimal", "with-time", "with-json"] }
sea-orm-migration = { version = "2.0.0-rc.38", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
netstat2 = "0.11.2"
sysinfo = "0.38.1"
time = { version = "0.3.44", features = ["formatting", "parsing"] }
tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
