[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
configuration.workspace = true
constants.workspace = true
model.workspace = true
rbac.workspace = true
serde.workspace = true
storage.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
sea-orm-migration.workspace = true
tower-http.workspace = true
hook_tracing.workspace = true
types.workspace = true
user.workspace = true
wallet.workspace = true
