[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
api_token.workspace = true
configuration.workspace = true
constants.workspace = true
group.workspace = true
i18n.workspace = true
model.workspace = true
provider.workspace = true
rbac.workspace = true
serde.workspace = true
serde_json.workspace = true
setting.workspace = true
storage.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
sea-orm-migration.workspace = true
tower-http.workspace = true
hook_tracing.workspace = true
types.workspace = true
user.workspace = true
uuid.workspace = true
wallet.workspace = true
