[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
api_token.workspace = true
captcha.workspace = true
card_code.workspace = true
configuration.workspace = true
constants.workspace = true
dashboard.workspace = true
futures-util.workspace = true
group.workspace = true
i18n.workspace = true
model.workspace = true
operations.workspace = true
provider.workspace = true
proxy.workspace = true
rbac.workspace = true
redis.workspace = true
regex.workspace = true
req.workspace = true
rust_decimal.workspace = true
rust-embed.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
setting.workspace = true
storage.workspace = true
netstat2.workspace = true
sysinfo.workspace = true
time.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
sea-orm-migration.workspace = true
thiserror.workspace = true
tower-http.workspace = true
hook_tracing.workspace = true
types.workspace = true
user.workspace = true
uuid.workspace = true
wallet.workspace = true
