[package]
name = "formats"
version.workspace = true
edition.workspace = true
description = "AI API format conversion and planning logic for Hook"

[dependencies]
base64.workspace = true
http.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
url.workspace = true
uuid.workspace = true
