[package]
name = "model"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
storage.workspace = true
thiserror.workspace = true
types.workspace = true

[dev-dependencies]
tokio.workspace = true
