[package]
name = "model_status"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
futures-util.workspace = true
rust_decimal.workspace = true
serde_json.workspace = true
storage.workspace = true
thiserror.workspace = true
time.workspace = true
types.workspace = true

[dev-dependencies]
constants.workspace = true
tokio.workspace = true
