[package]
name = "payment"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
md-5.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
