[package]
name = "provider"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
currency.workspace = true
hex.workspace = true
ring.workspace = true
req.workspace = true
rust_decimal.workspace = true
rbac.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
storage.workspace = true
thiserror.workspace = true
types.workspace = true
