[package]
name = "rbac"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
constants.workspace = true
matchit.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
storage.workspace = true
thiserror.workspace = true
types.workspace = true
user.workspace = true

[dev-dependencies]
tokio.workspace = true
tower.workspace = true
