[package]
name = "scheduler"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
futures-util.workspace = true
hook_tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
storage.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
types.workspace = true
