[package]
name = "storage"
version.workspace = true
edition.workspace = true

[dependencies]
constants.workspace = true
jiff.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toasty.workspace = true
types.workspace = true
uuid.workspace = true
