[package]
name = "storage"
version.workspace = true
edition.workspace = true

[dependencies]
constants.workspace = true
currency.workspace = true
flate2.workspace = true
hex.workspace = true
jiff.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sea-orm.workspace = true
thiserror.workspace = true
tokio.workspace = true
types.workspace = true
uuid.workspace = true
time.workspace = true

[dev-dependencies]
tokio.workspace = true
