[package]
name = "user"
version.workspace = true
edition.workspace = true

[dependencies]
argon2.workspace = true
async-trait.workspace = true
axum.workspace = true
configuration.workspace = true
constants.workspace = true
jsonwebtoken.workspace = true
rand_core.workspace = true
serde.workspace = true
storage.workspace = true
thiserror.workspace = true
rust_decimal.workspace = true
types.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
