[package]
name = "user"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
bcrypt.workspace = true
captcha.workspace = true
configuration.workspace = true
constants.workspace = true
jsonwebtoken.workspace = true
lettre.workspace = true
rand.workspace = true
rand_core.workspace = true
redis.workspace = true
serde.workspace = true
setting.workspace = true
sha2.workspace = true
storage.workspace = true
thiserror.workspace = true
rust_decimal.workspace = true
time.workspace = true
types.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
