[package]
name = "wallet"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
constants.workspace = true
configuration.workspace = true
currency.workspace = true
rust_decimal.workspace = true
rbac.workspace = true
serde.workspace = true
storage.workspace = true
thiserror.workspace = true
time.workspace = true
types.workspace = true

[dev-dependencies]
tokio.workspace = true
